update edpoint untuk pelanggan dan transaksi
