# app/confRouter.go
@@ -5,6 +5,8 @@ func (app *App) setRouters() {
 	app.Post("/v1/otlet/otp", app.createNewUser)
 	app.Post("/v1/otlet/otpconfirm", app.ConfirmOtp)
 	app.Post("/v1/otlet/addbarang", app.AddBarang)
+	app.Post("/v1/otlet/bayarutangp", app.BayarUtangPelanggan)
+	app.Get("/", app.HealthCheck)
 	app.GetQueryBarangSort("/v1/otlet/listbarang", app.ListBarang)
 	app.GetQueryStruk("/v1/otlet/getstruk", app.GetStrukTransaksi)
 	app.GetQueryBarangSort("/v1/otlet/listtransaksi", app.ListTransaksi)
@@ -13,6 +15,7 @@ func (app *App) setRouters() {
 	app.GetQueryListPelanggan("/v1/otlet/listpelanggan", app.ListPelanggan)
 	app.GetBarangInformation("/v1/otlet/baranginfo", app.BarangInformations)
 	app.GetQueryPelanggan("/v1/otlet/infopelanggan", app.DetailPelanggan)
+	app.GetQueryNominal("/v1/otlet/rekomnominal", app.RekomendasiNominal)
 	app.Post("/v1/otlet/registrasi", app.RegisterUser)
 	app.Post("/v1/otlet/addkategori", app.AddKategori)
 	app.Post("/v1/otlet/addsuplier", app.AddSuplier)
