# controller/Account/ownerotlet/transaksi/lisTransaksi.go
@@ -3,9 +3,9 @@ package transaksi
 import (
 	"hara-depo-proj/model/mobile"
 	"hara-depo-proj/util/customResponse"
-	"log"
 	"net/http"
 	"strconv"
+	"strings"
 
 	"github.com/gorilla/mux"
 	"github.com/jinzhu/gorm"
@@ -13,8 +13,9 @@ import (
 
 func ListTransaksi(db *gorm.DB, w http.ResponseWriter, r *http.Request) {
 
-	transaksi := []mobile.TransaksiUang{}
-	response := []mobile.TransaksiUang{}
+	response := []mobile.ResponListTransaksi{}
+	responseAkhir := []mobile.ResponAkhirTransaksi{}
+	responses := []mobile.ResponAkhirTransaksi{}
 
 	vars := mux.Vars(r)
 	page, _ := strconv.Atoi(vars["page"])
@@ -34,20 +35,30 @@ func ListTransaksi(db *gorm.DB, w http.ResponseWriter, r *http.Request) {
 		qsort = "nama_kasir asc"
 	}
 
-	if err := db.Where("kode_user=?", userJ).Offset(dbOffset).Limit(10).Order(qsort).Find(&transaksi).Error; err != nil {
-		customResponse.RespondError(w, http.StatusInternalServerError, "error get datas")
+	if err := db.Table("transaksi_uang").Select("transaksi_uang.*,hutang.status as status_hutang,sum(hutang.sisa_hutang) as total_piutang").
+		Joins("left join hutang on hutang.id_hutang = transaksi_uang.id_hutang").Where("kode_user=?", userJ).
+		Group("transaksi_uang.*,transaksi_uang.id_transaksi,status_hutang").
+		Offset(dbOffset).Limit(10).Order(qsort).Find(&response).Error; err != nil {
+		customResponse.RespondError(w, http.StatusInternalServerError, err.Error())
 		return
 	}
 
-	for _, data := range transaksi {
-		var hutang mobile.Hutang
-		if err := db.Where("id_hutang=?", data.IdHutang).First(&hutang).Error; err != nil {
-			log.Println(err.Error())
-			customResponse.RespondError(w, http.StatusInternalServerError, "error get datas")
-			return
-		}
-
-		response = append(response, data)
+	if err := db.Table("transaksi_uang").Select("DISTINCT to_char(create_date, 'YYYY-MM-DD') as tanggal_transaksi").
+		Joins("left join hutang on hutang.id_hutang = transaksi_uang.id_hutang").Where("kode_user=?", userJ).
+		Offset(dbOffset).Limit(10).Find(&responseAkhir).Error; err != nil {
+		customResponse.RespondError(w, http.StatusInternalServerError, err.Error())
+		return
 	}
-	customResponse.RespondJSON(w, 202, response)
+
+	for _, data := range responseAkhir {
+		for _, data2 := range response {
+			var tanggal = strings.Split(data2.CreateDate.String(), " ")[0]
+			if data.TanggalTransaksi == tanggal {
+				data.Transaksi = append(data.Transaksi, data2)
+			}
+		}
+		responses = append(responses, data)
+	}
+
+	customResponse.RespondJSON(w, 202, responses)
 }
